crates/kdl-config-derive/tests/ui/hoist_without_tag_attr.stderr
error: hoist_attrs requires tag_attr
  --> tests/ui/hoist_without_tag_attr.rs:13:6
   |
13 |     #[kdl(child, hoist_attrs = "model")]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
